# RustSigGen-evaluation

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.py  evaluate.py  evaluate_crates.py  evaluate_std.py  evaluate_uniqueness.py  ida_evaluation.py  justfile  pyproject.toml  shared.py  summary.py
examples/: Cargo.toml
ida_scripts/: get_symbols.py
prebuilt_binaries/: .gitattributes
rustc_demangle_py/: Cargo.toml  pyproject.toml
rustc_demangle_py/src/: lib.rs
std_generic_example/: Cargo.toml
