[project]
name = "samples"
version = "0.0.0"
dependencies = [
    "rustc_demangle_py",
    "requests>=2.32.3",
    "pyzipper>=0.3.6",
    "tomlkit>=0.13.2",
    # Only needed since IDA now picks up our venv and our plugin needs qasync...
    "qasync>=0.27.1",
    # We use idalib for our signature uniqueness evaluation
    "idapro",
]

[tool.uv.sources]
rustc_demangle_py = { workspace = true }
# NOTE: We expect a symlink to `/path/to/ida-pro-9.0/idalib/python` at `idalib`
idapro = { path = "idalib" }

[tool.uv.workspace]
members = ["rustc_demangle_py"]
