[package]
name = "rustc_demangle_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustc_demangle_py"
crate-type = ["cdylib"]

[dependencies]
msvc-demangler = "0.10.1"
pyo3 = "0.22.0"
rustc-demangle = "0.1.24"
